--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@
 	font-family: 'Karla';
 	src: url('./Karla/Karla-VariableFont_wght.ttf') format('truetype');
 }
+:root {
+	--bg-basic-color: #040714;
+	--font-basic-color: #F9F9F9;
+}
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Karla";
-	color: #F9F9F9;
+	color: var(--font-basic-color);
 }
 
 body {
-	background-color: #040714;
+	background-color: var(--bg-basic-color);
 }
 
 /* 헤더 CSS */
@@ -21,7 +25,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	padding: 22px 64px;
-	background-color: #040714;
+	background-color: var(--bg-basic-color);
 
 	position: sticky;
   top: 0px;
@@ -45,7 +49,7 @@ body {
 }
 
 .search-input:focus {
-	border-bottom: 1px solid #F9F9F9;
+	border-bottom: 1px solid var(--font-basic-color);
 }
 .header-search-box {
 	position: relative;
@@ -183,7 +187,7 @@ body {
 .main-movie-detail-btn,
 .select-movie-detail-btn {
 	padding: 10px 12px;
-	border: 1px solid #F9F9F9;
+	border: 1px solid var(--font-basic-color);
 	background-color: #000000CC;
 	border-radius: 4px;
 	font-size: 16px;
@@ -192,7 +196,7 @@ body {
 .main-movie-detail-btn:hover,
 .select-movie-detail-btn:hover {
 	border: 1px solid #000000CC;
-	background-color: #F9F9F9;
+	background-color: var(--font-basic-color);
 	color: #000000CC;
 	cursor: pointer;
 }
@@ -294,7 +298,7 @@ body {
 	width: 400px;
 	height: 600px;
 
-  border: 3px solid #F9F9F9;
+  border: 3px solid var(--font-basic-color);
 	border-radius: 12px;
 }
 
